# libamio

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  arm-toolchain.cmake
docs/: README_8md_source.html  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__AMIOI2C.html  group__AMIOI2C.js  group__HWIOI2C.html  group__HWIOI2C.js  group__LIBAMIOGPIO.html  group__LIBAMIOGPIO.js  group__LIBAMIOSERIAL.html  group__LIBAMIOSERIAL.js  group__LIBAMIOSPI.html  group__LIBAMIOSPI.js  group__LIBAMIOUART.html  group__LIBAMIOUART.js  group__LIBHWIOSPI.html  index.html  libamio-gpio_8c_source.html  libamio-gpio_8h.html  libamio-gpio_8h.js  libamio-gpio_8h__dep__incl.map  libamio-gpio_8h__dep__incl.md5  libamio-gpio_8h__incl.map  (+74 more)
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__HWIOI2C.html  group__LIBHWIOSPI.html  group__LIBHWIOSPI.js  index.html  libhwio-gpio_8c_source.html  libhwio-gpio_8h_source.html  libhwio-i2c_8c_source.html  libhwio-i2c_8h.html  libhwio-i2c_8h.js  libhwio-i2c_8h_source.html  libhwio-spi_8c_source.html  libhwio-spi_8h.html  libhwio-spi_8h__incl.map  libhwio-spi_8h_source.html  libhwio-uart_8c_source.html  libhwio-uart_8h_source.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  structI2C__Transaction.html  structSPI__Params.html  structSPI__Transaction.html  structi2cdevice.html  (+2 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  enums_0.js  groups_1.js  pages_0.js
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  (+20 more)
include/: libamio-gpio.h  libamio-i2c.h  libamio-serial.h  libamio-spi.h  libamio-uart.h  libhwio-i2c.h  libhwio-spi.h
src/: CMakeLists.txt  libamio-gpio.c  libamio-i2c.c  libamio-serial.c  libamio-spi.c  libamio-uart.c  libhwio-i2c.c  libhwio-spi.c
